--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "npm run dev",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "push": "git push origin master"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "2.1.0",
