--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "2.1.0",
-    "@ruleenginejs/ruleengine-ui": "1.1.10",
+    "@ruleenginejs/ui": "1.2.0",
     "@vscode/codicons": "0.0.26",
     "highlight.js": "11.3.1",
     "lodash": "4.17.21",
