--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "2.1.0",
-    "@ruleenginejs/ui": "1.2.2",
+    "@ruleenginejs/ui": "1.2.3",
     "@vscode/codicons": "0.0.27",
-    "highlight.js": "11.3.1",
+    "highlight.js": "11.4.0",
     "lodash": "4.17.21",
-    "vue": "3.2.26",
+    "vue": "3.2.30",
     "vue-router": "4.0.12"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "2.0.1",
-    "autoprefixer": "10.4.1",
-    "eslint": "8.6.0",
-    "eslint-plugin-vue": "8.2.0",
-    "postcss": "8.4.5",
-    "postcss-import": "14.0.2",
-    "tailwindcss": "2.2.19",
-    "vite": "2.7.10"
+    "@vitejs/plugin-vue": "^2.1.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.8.0",
+    "eslint-plugin-vue": "^8.4.1",
+    "postcss": "^8.4.6",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^2.2.19",
+    "vite": "^2.7.13"
   },
   "repository": {
     "type": "git",
