--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "npm run dev",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint . --ext .vue,.js --fix --ignore-path .gitignore",
+    "format": "prettier --write \"src/**/*.{js,vue,css}\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "2.1.0",
@@ -19,14 +22,23 @@
     "vue-router": "4.0.15"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-angular": "^16.2.4",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.15.0",
     "eslint-plugin-vue": "^8.7.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.1",
     "postcss": "^8.4.13",
     "postcss-import": "^14.1.0",
+    "prettier": "^2.6.2",
     "tailwindcss": "^2.2.19",
     "vite": "^2.9.9"
+  },
+  "lint-staged": {
+    "*.{js,vue,css}": "prettier --write"
   },
   "repository": {
     "type": "git",
